--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "clsx": "^2.1.0",
     "next": "14.0.2",
     "react": "^18",
+    "react-accessible-accordion": "^5.0.0",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
     "uuid": "^9.0.1"
