--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@vercel/analytics": "^1.2.2",
     "clsx": "^2.1.0",
-    "next": ">=14.2.21",
+    "next": "15.2.6",
     "react": "^18",
     "react-accessible-accordion": "^5.0.0",
     "react-dom": "^18",
